updated jupyter compose

--- a/compose-teaching.yaml
+++ b/compose-teaching.yaml
@@ -1,9 +1,8 @@
 services:
-  teaching-jupyter:
-    image: ghcr.io/collaborativeroboticslab/algorithmic-robots-tutorials:latest
-    environment:
-      - JUPYTER_ENABLE_LAB=yes
+  ar-jupyter:
+    image: ghcr.io/collaborativeroboticslab/algorithmic-robots-labs:latest
+    command: start-notebook.sh --NotebookApp.token=''
+    privileged: true
+    network_mode: host
     ports:
       - "8888:8888"
-    volumes:
-      - ./teaching-jupyter/notebooks:/home/jovyan/work
